Finish technology icons

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,13 +1,51 @@
 
 [entity-name]
+cannon-ammo-turret-rampant-arsenal=Cannon Turret
+rapid-cannon-ammo-turret-rampant-arsenal=Rapid Cannon Turret
+capsule-ammo-turret-rampant-arsenal=Capsule Launcher
+rocket-ammo-turret-rampant-arsenal=Rocket Turret
+rapid-rocket-ammo-turret-rampant-arsenal=Rapid Rocket Turret
+suppression-cannon-fluid-turret-rampant-arsenal=Advanced Flamethrower Turret
+shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
+advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
+lightning-electric-turret-rampant-arsenal=Lightning Turret
 
 [item-description]
 
 [item-name]
+distractor-capsule-ammo-rampant-arsenal=Distractor Launcher Ammo
+destroyer-capsule-ammo-rampant-arsenal=Destroyer Launcher Ammo
+defender-capsule-ammo-rampant-arsenal=Defender Launcher Ammo
+slowdown-capsule-ammo-rampant-arsenal=Slowdown Launcher Ammo
+poison-capsule-ammo-rampant-arsenal=Poison Launcher Ammo
+landmine-capsule-ammo-rampant-arsenal=Landmine Launcher Ammo
+grenade-capsule-ammo-rampant-arsenal=Grenade Launcher Ammo
+cluster-grenade-capsule-ammo-rampant-arsenal=Cluster Grenade Launcher Ammo
 
 [recipe-name]
 
 [technology-name]
+rampant-arsenal-technology-capsule-turret=Capsule Turrets
+rampant-arsenal-technology-cannon-turret=Cannon Turrets
+rampant-arsenal-technology-flamethrower=Advanced Flamethrower Turrets
+rampant-arsenal-technology-advanced-laser-turret=Advanced Laser Turrets
+rampant-arsenal-technology-lightning=Lightning Turrets
+rampant-arsenal-technology-rocket-turret=Rocket Turrets
+rampant-arsenal-technology-shotgun=Shotgun Turrets
+rampant-arsenal-technology-rapid-rocket-turret=Rapid Rocket Turrets
+
+rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
+rampant-arsenal-technology-cannon-turret-damage=Cannon Turret Damage Bonus
+rampant-arsenal-technology-shotgun-turret-damage=Shotgun Turret Damage Bonus
+rampant-arsenal-technology-rocket-turret-damage=Rocket Turret Damage Bonus
+
+[modifier-description]
+capsule-launcher-shooting-speed-bonus=Capsule Launcher Shooting Speed: +__1__
+cannon-ammo-turret-rampant-arsenal-attack-bonus=Cannon Turret Damage Bonus: +__1__
+shotgun-ammo-turret-rampant-arsenal-attack-bonus=Shotgun Turret Damage Bonus: +__1__
+rocket-ammo-turret-rampant-arsenal-attack-bonus=Rocket Turret Damage Bonus: +__1__
+rapid-rocket-ammo-turret-rampant-arsenal-attack-bonus=Rapid Rocket Turret Damage Bonus: +__1__
+rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage Bonus: +__1__
 
 [technology-description]
 
