--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -45,6 +45,7 @@ cannon-ammo-turret-rampant-arsenal-attack-bonus=Cannon Turret Damage Bonus: +__1
 shotgun-ammo-turret-rampant-arsenal-attack-bonus=Shotgun Turret Damage Bonus: +__1__
 rocket-ammo-turret-rampant-arsenal-attack-bonus=Rocket Turret Damage Bonus: +__1__
 rapid-rocket-ammo-turret-rampant-arsenal-attack-bonus=Rapid Rocket Turret Damage Bonus: +__1__
+suppression-cannon-fluid-turret-rampant-arsenal-attack-bonus=Advanced Flamethrower Turret Damage Bonus: +__1__
 rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage Bonus: +__1__
 
 [technology-description]
