--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -38,6 +38,9 @@ rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
 rampant-arsenal-technology-cannon-turret-damage=Cannon Turret Damage Bonus
 rampant-arsenal-technology-shotgun-turret-damage=Shotgun Turret Damage Bonus
 rampant-arsenal-technology-rocket-turret-damage=Rocket Turret Damage Bonus
+rampant-arsenal-technology-landmine-damage=Landmine Damage Bonus
+rampant-arsenal-technology-artillery-turret-damage=Artillery Turret Damage Bonus
+rampant-arsenal-technology-artillery-shell-damage=Artillery Shell Damage Bonus
 
 [modifier-description]
 capsule-launcher-shooting-speed-bonus=Capsule Launcher Shooting Speed: +__1__
@@ -47,6 +50,10 @@ rocket-ammo-turret-rampant-arsenal-attack-bonus=Rocket Turret Damage Bonus: +__1
 rapid-rocket-ammo-turret-rampant-arsenal-attack-bonus=Rapid Rocket Turret Damage Bonus: +__1__
 suppression-cannon-fluid-turret-rampant-arsenal-attack-bonus=Advanced Flamethrower Turret Damage Bonus: +__1__
 rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage Bonus: +__1__
+landmine-damage-bonus=Landmine Damage Bonus: +__1__
+artillery-turret-attack-bonus=Artillery Turret Damage Bonus: +__1__
+artillery-wagon-attack-bonus=Artillery Wagon Turret Damage Bonus: +__1__
+artillery-shell-damage-bonus=Artillery Shell Damage Bonus: +__1__
 
 [technology-description]
 
