finish artillery, add self-targeted medic

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,7 @@
 
 [entity-name]
 cannon-ammo-turret-rampant-arsenal=Cannon Turret
+gun-ammo-turret-rampant-arsenal=Gun Turret MkII
 rapid-cannon-ammo-turret-rampant-arsenal=Rapid Cannon Turret
 capsule-ammo-turret-rampant-arsenal=Capsule Launcher
 rocket-ammo-turret-rampant-arsenal=Rocket Turret
@@ -9,6 +10,21 @@ suppression-cannon-fluid-turret-rampant-arsenal=Advanced Flamethrower Turret
 shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
 advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
+
+he-landmine-rampant-arsenal=High Explosive Landmine
+bio-landmine-rampant-arsenal=Bio Landmine
+incendiary-landmine-rampant-arsenal=Incendiary Landmine
+nuclear-landmine-rampant-arsenal=Nuclear Landmine
+
+repair-cloud-rampant-arsenal=Repair Cloud
+paralysis-cloud-rampant-arsenal=Paralysis Cloud
+toxic-cloud-rampant-arsenal=Toxic Cloud
+
+big-repair-cloud-rampant-arsenal=Repair Cloud
+big-paralysis-cloud-rampant-arsenal=Paralysis Cloud
+big-toxic-cloud-rampant-arsenal=Toxic Cloud
+big-poison-cloud-rampant-arsenal=Poison Cloud
+
 
 [item-description]
 
@@ -21,8 +37,65 @@ poison-capsule-ammo-rampant-arsenal=Poison Launcher Ammo
 landmine-capsule-ammo-rampant-arsenal=Landmine Launcher Ammo
 grenade-capsule-ammo-rampant-arsenal=Grenade Launcher Ammo
 cluster-grenade-capsule-ammo-rampant-arsenal=Cluster Grenade Launcher Ammo
+napalm-ammo-rampant-arsenal=Napalm Ammo
+minigun-gun-rampant-arsenal=Minigun
+speed-capsule-rampant-arsenal=Speed Booster Capsule
+healing-capsule-rampant-arsenal=Health Capsule
+mortar-gun-rampant-arsenal=Mortar
+rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
+
+
+bio-magazine-ammo-rampant-arsenal=Bio Magazine
+he-magazine-ammo-rampant-arsenal=High Explosive Magazine
+incendiary-magazine-ammo-rampant-arsenal=Incendiary Magazine
+
+
+bio-rocket-ammo-rampant-arsenal=Bio Rocket
+he-rocket-ammo-rampant-arsenal=High Explosive Rocket
+incendiary-rocket-ammo-rampant-arsenal=Incendiary Rocket
+
+
+bio-cannon-shell-ammo-rampant-arsenal=Bio Cannon Shell
+he-cannon-shell-ammo-rampant-arsenal=High Explosive Cannon Shell
+incendiary-cannon-shell-ammo-rampant-arsenal=Incendiary Cannon Shell
+
+nuclear-artillery-ammo-rampant-arsenal=Nuclear Artillery Shell
+
+bio-shotgun-ammo-rampant-arsenal=Bio Shotgun Shells
+he-shotgun-ammo-rampant-arsenal=High Explosive Shotgun Shells
+incendiary-shotgun-ammo-rampant-arsenal=Incendiary Shotgun Shells
+uranium-shotgun-ammo-rampant-arsenal=Uranium Shotgun Shells
+
+bio-landmine-capsule-ammo-rampant-arsenal=Bio Landmine Launcher Ammo
+he-landmine-capsule-ammo-rampant-arsenal=High Explosive Landmine Launcher Ammo
+incendiary-landmine-capsule-ammo-rampant-arsenal=Incendiary Landmine Launcher Ammo
+nuclear-landmine-capsule-ammo-rampant-arsenal=Nuclear Landmine Launcher Ammo
+
+
+bio-grenade-capsule-ammo-rampant-arsenal=Bio Grenade Launcher Ammo
+he-grenade-capsule-ammo-rampant-arsenal=High Explosive Grenade Launcher Ammo
+incendiary-grenade-capsule-ammo-rampant-arsenal=Incendiary Grenade Launcher Ammo
+
+toxic-capsule-ammo-rampant-arsenal=Toxic Capsule Launcher Ammo
+paralysis-capsule-ammo-rampant-arsenal=Paralysis Capsule Launcher Ammo
+repair-capsule-ammo-rampant-arsenal=Repair Capsule Launcher Ammo
+
+
+bio-grenade-capsule-rampant-arsenal=Bio Grenade
+he-grenade-capsule-rampant-arsenal=High Explosive Grenade
+incendiary-grenade-capsule-rampant-arsenal=Incendiary Grenade
+
+paralysis-capsule-rampant-arsenal=Paralysis Capsule
+toxic-capsule-rampant-arsenal=Toxic Capsule
+repair-capsule-rampant-arsenal=Repair Capsule
 
 [recipe-name]
+
+[damage-type-name]
+healing=Healing
+
+[fluid-name]
+napalm-fluid-rampant-arsenal=Napalm
 
 [technology-name]
 rampant-arsenal-technology-capsule-turret=Capsule Turrets
@@ -41,6 +114,47 @@ rampant-arsenal-technology-rocket-turret-damage=Rocket Turret Damage Bonus
 rampant-arsenal-technology-landmine-damage=Landmine Damage Bonus
 rampant-arsenal-technology-artillery-turret-damage=Artillery Turret Damage Bonus
 rampant-arsenal-technology-artillery-shell-damage=Artillery Shell Damage Bonus
+
+rampant-arsenal-technology-incendiary-napalm=Advanced Flamethrower Fuel
+rampant-arsenal-technology-boosters=Boosters
+
+rampant-arsenal-technology-he-landmine=High Explosive Landmines
+rampant-arsenal-technology-bio-landmine=Bio Landmines
+rampant-arsenal-technology-incendiary-landmine=Incendiary Landmines
+
+rampant-arsenal-technology-he-grenades=High Explosive Grenades
+rampant-arsenal-technology-bio-grenades=Bio Grenades
+rampant-arsenal-technology-incendiary-grenades=Incendiary Grenades
+
+rampant-arsenal-technology-he-bullets=High Explosive Bullets
+rampant-arsenal-technology-bio-bullets=Bio Bullets
+rampant-arsenal-technology-incendiary-bullets=Incendiary Bullets
+
+rampant-arsenal-technology-he-rockets=High Explosive Rockets
+rampant-arsenal-technology-bio-rockets=Bio Rockets
+rampant-arsenal-technology-incendiary-rockets=Incendiary Rockets
+
+
+rampant-arsenal-technology-he-shotgun-shells=High Explosive Shotgun Shells
+rampant-arsenal-technology-bio-shotgun-shells=Bio Shotgun Shells
+rampant-arsenal-technology-incendiary-shotgun-shells=Incendiary Shotgun Shells
+
+rampant-arsenal-technology-he-cannon-shells=High Explosive Cannon Shells
+rampant-arsenal-technology-bio-cannon-shells=Bio Cannon Shells
+rampant-arsenal-technology-incendiary-cannon-shells=Incendiary Cannon Shells
+
+
+rampant-arsenal-technology-bio-capsules=Bio Capsules
+rampant-arsenal-technology-paralysis=Paralysis Capsules
+
+rampant-arsenal-technology-regeneration=Regeneration
+
+rampant-arsenal-technology-turrets-2=Turrets 2
+
+rampant-arsenal-technology-bio-weapons=Bio Weapons
+rampant-arsenal-technology-incendiary=Incendiary Weapons
+rampant-arsenal-technology-high-explosives=High Explosive Weapons
+
 
 [modifier-description]
 capsule-launcher-shooting-speed-bonus=Capsule Launcher Shooting Speed: +__1__
