needs final checks

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -19,6 +19,7 @@ nuclear-landmine-rampant-arsenal=Nuclear Landmine
 repair-cloud-rampant-arsenal=Repair Cloud
 paralysis-cloud-rampant-arsenal=Paralysis Cloud
 toxic-cloud-rampant-arsenal=Toxic Cloud
+massive-fire-cloud-rampant-arsenal=Fire Cloud
 
 big-repair-cloud-rampant-arsenal=Repair Cloud
 big-paralysis-cloud-rampant-arsenal=Paralysis Cloud
@@ -59,6 +60,9 @@ bio-cannon-shell-ammo-rampant-arsenal=Bio Cannon Shell
 he-cannon-shell-ammo-rampant-arsenal=High Explosive Cannon Shell
 incendiary-cannon-shell-ammo-rampant-arsenal=Incendiary Cannon Shell
 
+bio-artillery-ammo-rampant-arsenal=Bio Artillery Shell
+he-artillery-ammo-rampant-arsenal=High Explosive Artillery Shell
+incendiary-artillery-ammo-rampant-arsenal=Incendiary Artillery Shell
 nuclear-artillery-ammo-rampant-arsenal=Nuclear Artillery Shell
 
 bio-shotgun-ammo-rampant-arsenal=Bio Shotgun Shells
@@ -143,6 +147,10 @@ rampant-arsenal-technology-he-cannon-shells=High Explosive Cannon Shells
 rampant-arsenal-technology-bio-cannon-shells=Bio Cannon Shells
 rampant-arsenal-technology-incendiary-cannon-shells=Incendiary Cannon Shells
 
+
+rampant-arsenal-technology-he-artillery-shells=High Explosive Artillery Shells
+rampant-arsenal-technology-bio-artillery-shells=Bio Artillery Shells
+rampant-arsenal-technology-incendiary-artillery-shells=Incendiary Artillery Shells
 
 rampant-arsenal-technology-bio-capsules=Bio Capsules
 rampant-arsenal-technology-paralysis=Paralysis Capsules
