--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,6 +5,7 @@ gun-ammo-turret-rampant-arsenal=Gun Turret MkII
 rapid-cannon-ammo-turret-rampant-arsenal=Rapid Cannon Turret
 capsule-ammo-turret-rampant-arsenal=Capsule Launcher
 rocket-ammo-turret-rampant-arsenal=Rocket Turret
+medic-ammo-turret-rampant-arsenal=Medic Turret
 rapid-rocket-ammo-turret-rampant-arsenal=Rapid Rocket Turret
 suppression-cannon-fluid-turret-rampant-arsenal=Advanced Flamethrower Turret
 shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
@@ -20,6 +21,7 @@ repair-cloud-rampant-arsenal=Repair Cloud
 paralysis-cloud-rampant-arsenal=Paralysis Cloud
 toxic-cloud-rampant-arsenal=Toxic Cloud
 massive-fire-cloud-rampant-arsenal=Fire Cloud
+massive-repair-cloud-rampant-arsenal=Repair Cloud
 
 big-repair-cloud-rampant-arsenal=Repair Cloud
 big-paralysis-cloud-rampant-arsenal=Paralysis Cloud
@@ -83,6 +85,7 @@ incendiary-grenade-capsule-ammo-rampant-arsenal=Incendiary Grenade Launcher Ammo
 toxic-capsule-ammo-rampant-arsenal=Toxic Capsule Launcher Ammo
 paralysis-capsule-ammo-rampant-arsenal=Paralysis Capsule Launcher Ammo
 repair-capsule-ammo-rampant-arsenal=Repair Capsule Launcher Ammo
+self-repair-capsule-ammo-rampant-arsenal=Medic Repair Ammo
 
 
 bio-grenade-capsule-rampant-arsenal=Bio Grenade
@@ -112,6 +115,7 @@ rampant-arsenal-technology-shotgun=Shotgun Turrets
 rampant-arsenal-technology-rapid-rocket-turret=Rapid Rocket Turrets
 
 rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
+rampant-arsenal-technology-capsule-turret-damage=Capsule Turret Damage Bonus
 rampant-arsenal-technology-cannon-turret-damage=Cannon Turret Damage Bonus
 rampant-arsenal-technology-shotgun-turret-damage=Shotgun Turret Damage Bonus
 rampant-arsenal-technology-rocket-turret-damage=Rocket Turret Damage Bonus
@@ -156,6 +160,7 @@ rampant-arsenal-technology-bio-capsules=Bio Capsules
 rampant-arsenal-technology-paralysis=Paralysis Capsules
 
 rampant-arsenal-technology-regeneration=Regeneration
+rampant-arsenal-technology-regeneration-turrets=Regeneration Turrets
 
 rampant-arsenal-technology-turrets-2=Turrets 2
 
@@ -174,8 +179,13 @@ suppression-cannon-fluid-turret-rampant-arsenal-attack-bonus=Advanced Flamethrow
 rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage Bonus: +__1__
 landmine-damage-bonus=Landmine Damage Bonus: +__1__
 artillery-turret-attack-bonus=Artillery Turret Damage Bonus: +__1__
+gun-ammo-turret-rampant-arsenal-attack-bonus=Gun Turret MkII Turret Damage Bonus: +__1__
+capsule-ammo-turret-rampant-arsenal-attack-bonus=Capsule Launcher Damage Bonus: +__1__
+medic-ammo-turret-rampant-arsenal-attack-bonus=Medic Turret Repair Bonus: +__1__
 artillery-wagon-attack-bonus=Artillery Wagon Turret Damage Bonus: +__1__
 artillery-shell-damage-bonus=Artillery Shell Damage Bonus: +__1__
+capsule-launcher-damage-bonus=Launcher Ammo Damage Bonus: +__1__
+turret-capsule-damage-bonus=Medic Ammo Repair Bonus: +__1__
 
 [technology-description]
 
