--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,6 +2,7 @@
 [entity-name]
 cannon-ammo-turret-rampant-arsenal=Cannon Turret
 gun-ammo-turret-rampant-arsenal=Gun Turret MkII
+rifle-ammo-turret-rampant-arsenal=Rifle Turret
 rapid-cannon-ammo-turret-rampant-arsenal=Rapid Cannon Turret
 capsule-ammo-turret-rampant-arsenal=Capsule Launcher
 rocket-ammo-turret-rampant-arsenal=Rocket Turret
@@ -17,11 +18,15 @@ bio-landmine-rampant-arsenal=Bio Landmine
 incendiary-landmine-rampant-arsenal=Incendiary Landmine
 nuclear-landmine-rampant-arsenal=Nuclear Landmine
 
+small-repair-cloud-rampant-arsenal=Repair Cloud
 repair-cloud-rampant-arsenal=Repair Cloud
 paralysis-cloud-rampant-arsenal=Paralysis Cloud
 toxic-cloud-rampant-arsenal=Toxic Cloud
 massive-fire-cloud-rampant-arsenal=Fire Cloud
 massive-repair-cloud-rampant-arsenal=Repair Cloud
+
+mending-wall-rampant-arsenal=Reactive Mending Wall
+mending-gate-rampant-arsenal=Reactive Mending Gate
 
 big-repair-cloud-rampant-arsenal=Repair Cloud
 big-paralysis-cloud-rampant-arsenal=Paralysis Cloud
@@ -160,6 +165,7 @@ rampant-arsenal-technology-bio-capsules=Bio Capsules
 rampant-arsenal-technology-paralysis=Paralysis Capsules
 
 rampant-arsenal-technology-regeneration=Regeneration
+rampant-arsenal-technology-regeneration-walls=Regeneration Walls
 rampant-arsenal-technology-regeneration-turrets=Regeneration Turrets
 
 rampant-arsenal-technology-turrets-2=Turrets 2
