--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -33,6 +33,15 @@ big-paralysis-cloud-rampant-arsenal=Paralysis Cloud
 big-toxic-cloud-rampant-arsenal=Toxic Cloud
 big-poison-cloud-rampant-arsenal=Poison Cloud
 
+nuclear-car-vehicle-rampant-arsenal=Nuclear Car
+advanced-car-vehicle-rampant-arsenal=Advanced Car
+
+nuclear-tank-vehicle-rampant-arsenal=Nuclear Tank
+advanced-tank-vehicle-rampant-arsenal=Advanced Tank
+
+nuclear-train-vehicle-rampant-arsenal=Nuclear Locomotive
+
+basic-fluid-generator-rampant-arsenal=Oil Based Generator
 
 [item-description]
 
@@ -52,6 +61,24 @@ healing-capsule-rampant-arsenal=Health Capsule
 mortar-gun-rampant-arsenal=Mortar
 rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
 
+advanced-car-machinegun-gun-rampant-arsenal=Minigun
+advanced-car-shotgun-gun-rampant-arsenal=Shotgun
+
+advanced-tank-machinegun-gun-rampant-arsenal=Minigun
+advanced-tank-cannon-gun-rampant-arsenal=Cannon
+advanced-tank-launcher-gun-rampant-arsenal=Mortar
+advanced-tank-flamethrower-gun-rampant-arsenal=Flamethrower
+
+nuclear-tank-machinegun-gun-rampant-arsenal=Minigun
+nuclear-tank-cannon-gun-rampant-arsenal=Cannon
+nuclear-tank-launcher-gun-rampant-arsenal=Mortar
+nuclear-tank-flamethrower-gun-rampant-arsenal=Flamethrower
+nuclear-tank-rocket-gun-rampant-arsenal=Rocket Launcher
+
+
+nuclear-car-machinegun-gun-rampant-arsenal=Minigun
+nuclear-car-shotgun-gun-rampant-arsenal=Shotgun
+nuclear-car-launcher-gun-rampant-arsenal=Mortar
 
 bio-magazine-ammo-rampant-arsenal=Bio Magazine
 he-magazine-ammo-rampant-arsenal=High Explosive Magazine
@@ -168,11 +195,17 @@ rampant-arsenal-technology-regeneration=Regeneration
 rampant-arsenal-technology-regeneration-walls=Regeneration Walls
 rampant-arsenal-technology-regeneration-turrets=Regeneration Turrets
 
-rampant-arsenal-technology-turrets-2=Turrets 2
-
 rampant-arsenal-technology-bio-weapons=Bio Weapons
 rampant-arsenal-technology-incendiary=Incendiary Weapons
 rampant-arsenal-technology-high-explosives=High Explosive Weapons
+
+rampant-arsenal-technology-nuclear-railway=Nuclear Railway
+rampant-arsenal-technology-nuclear-tanks=Nuclear Tanks
+
+rampant-arsenal-technology-oil-burner=Oil Burners
+rampant-arsenal-technology-tanks=Tanks
+rampant-arsenal-technology-cars=Automobilism
+rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
 
 
 [modifier-description]
