everything short of personal active passive equipment

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -43,6 +43,9 @@ nuclear-train-vehicle-rampant-arsenal=Nuclear Locomotive
 
 basic-fluid-generator-rampant-arsenal=Oil Based Generator
 
+reinforced-wall-rampant-arsenal=Reinforced Wall
+reinforced-gate-rampant-arsenal=Reinforced Gate
+
 [item-description]
 
 [item-name]
@@ -79,6 +82,8 @@ nuclear-tank-rocket-gun-rampant-arsenal=Rocket Launcher
 nuclear-car-machine-gun-gun-rampant-arsenal=Minigun
 nuclear-car-shotgun-gun-rampant-arsenal=Shotgun
 nuclear-car-launcher-gun-rampant-arsenal=Mortar
+
+power-armor-mk3-armor-rampant-arsenal=Power Armor MK3
 
 bio-magazine-ammo-rampant-arsenal=Bio Magazine
 he-magazine-ammo-rampant-arsenal=High Explosive Magazine
@@ -206,6 +211,16 @@ rampant-arsenal-technology-oil-burner=Oil Burners
 rampant-arsenal-technology-tanks=Tanks
 rampant-arsenal-technology-cars=Automobilism
 rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
+rampant-arsenal-technology-battery-equipment=Battery Equipment
+rampant-arsenal-technology-shield-equipment=Energy Shield Equipment
+rampant-arsenal-technology-stone-walls=Stone Walls
+rampant-arsenal-technology-generator-equipment=Portable Fusion Reactor
+
+[equipment-name]
+
+mk3-battery-rampant-arsenal=Battery MK3
+mk3-shield-rampant-arsenal=Energy Shield MK3
+mk3-generator-rampant-arsenal=Portable Fusion Reactor MK2
 
 
 [modifier-description]
