finishing up equipment, adding files into commit history

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -209,12 +209,15 @@ rampant-arsenal-technology-nuclear-tanks=Nuclear Tanks
 
 rampant-arsenal-technology-oil-burner=Oil Burners
 rampant-arsenal-technology-tanks=Tanks
+rampant-arsenal-technology-turrets=Turrets
 rampant-arsenal-technology-cars=Automobilism
+rampant-arsenal-technology-power-armor-mk3=Power Armor MK3
 rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
 rampant-arsenal-technology-battery-equipment=Battery Equipment
 rampant-arsenal-technology-shield-equipment=Energy Shield Equipment
 rampant-arsenal-technology-stone-walls=Stone Walls
 rampant-arsenal-technology-generator-equipment=Portable Fusion Reactor
+rampant-arsenal-technology-character-health=Character Health Bonus
 
 [equipment-name]
 
@@ -240,6 +243,7 @@ artillery-wagon-attack-bonus=Artillery Wagon Turret Damage Bonus: +__1__
 artillery-shell-damage-bonus=Artillery Shell Damage Bonus: +__1__
 capsule-launcher-damage-bonus=Launcher Ammo Damage Bonus: +__1__
 turret-capsule-damage-bonus=Medic Ammo Repair Bonus: +__1__
+character-health-bonus=Character Health Bonus: +__1__
 
 [technology-description]
 
