--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -219,11 +219,22 @@ rampant-arsenal-technology-stone-walls=Stone Walls
 rampant-arsenal-technology-generator-equipment=Portable Fusion Reactor
 rampant-arsenal-technology-character-health=Character Health Bonus
 
+rampant-arsenal-technology-personal-bullets-defense=Personal Bullet Defense
+rampant-arsenal-technology-personal-cannon-defense=Personal Cannon Defense
+rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
+rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
+rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
+
 [equipment-name]
 
 mk3-battery-rampant-arsenal=Battery MK3
 mk3-shield-rampant-arsenal=Energy Shield MK3
 mk3-generator-rampant-arsenal=Portable Fusion Reactor MK2
+shotgun-passive-defense-rampant-arsenal=Personal Shotgun Defense
+cannon-passive-defense-rampant-arsenal=Personal Cannon Defense
+lightning-passive-defense-rampant-arsenal=Personal Lightning Defense
+bullets-passive-defense-rampant-arsenal=Personal Bullet Defense
+slow-passive-defense-rampant-arsenal=Personal Slowdown Defense
 
 
 [modifier-description]
