--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -230,6 +230,7 @@ rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 mk3-battery-rampant-arsenal=Battery MK3
 mk3-shield-rampant-arsenal=Energy Shield MK3
 mk3-generator-rampant-arsenal=Portable Fusion Reactor MK2
+nuclear-generator-rampant-arsenal=Portable Nuclear Reactor
 shotgun-passive-defense-rampant-arsenal=Personal Shotgun Defense
 cannon-passive-defense-rampant-arsenal=Personal Cannon Defense
 lightning-passive-defense-rampant-arsenal=Personal Lightning Defense
