capsule launcher landmine ammo no longer creates ghost on death

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,10 +13,15 @@ shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
 advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
 
+landmine-ghostless-rampant-arsenal=Land Mine
 he-landmine-rampant-arsenal=High Explosive Landmine
+he-landmine-ghostless-rampant-arsenal=High Explosive Landmine
 bio-landmine-rampant-arsenal=Bio Landmine
+bio-landmine-ghostless-rampant-arsenal=Bio Landmine
 incendiary-landmine-rampant-arsenal=Incendiary Landmine
+incendiary-landmine-ghostless-rampant-arsenal=Incendiary Landmine
 nuclear-landmine-rampant-arsenal=Nuclear Landmine
+nuclear-landmine-ghostless-rampant-arsenal=Nuclear Landmine
 
 small-repair-cloud-rampant-arsenal=Repair Cloud
 repair-cloud-rampant-arsenal=Repair Cloud
