--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -215,6 +215,7 @@ rampant-arsenal-technology-nuclear-tanks=Nuclear Tanks
 rampant-arsenal-technology-oil-burner=Oil Burners
 rampant-arsenal-technology-tanks=Tanks
 rampant-arsenal-technology-turrets=Turrets
+rampant-arsenal-technology-gun-turret-damage=Gun Turret Damage
 rampant-arsenal-technology-cars=Automobilism
 rampant-arsenal-technology-power-armor-mk3=Power Armor MK3
 rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
@@ -254,6 +255,7 @@ rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage
 landmine-damage-bonus=Landmine Damage Bonus: +__1__
 artillery-turret-attack-bonus=Artillery Turret Damage Bonus: +__1__
 gun-ammo-turret-rampant-arsenal-attack-bonus=Gun Turret MkII Turret Damage Bonus: +__1__
+rifle-ammo-turret-rampant-arsenal-attack-bonus=Rifle Turret Damage Bonus: +__1__
 capsule-ammo-turret-rampant-arsenal-attack-bonus=Capsule Launcher Damage Bonus: +__1__
 medic-ammo-turret-rampant-arsenal-attack-bonus=Medic Turret Repair Bonus: +__1__
 artillery-wagon-attack-bonus=Artillery Wagon Turret Damage Bonus: +__1__
@@ -263,5 +265,88 @@ turret-capsule-damage-bonus=Medic Ammo Repair Bonus: +__1__
 character-health-bonus=Character Health Bonus: +__1__
 
 [technology-description]
+rampant-arsenal-technology-capsule-turret=Capsule Turrets
+rampant-arsenal-technology-cannon-turret=Cannon Turrets
+rampant-arsenal-technology-flamethrower=Advanced Flamethrower Turrets
+rampant-arsenal-technology-advanced-laser-turret=Advanced Laser Turrets
+rampant-arsenal-technology-lightning=Lightning Turrets
+rampant-arsenal-technology-rocket-turret=Rocket Turrets
+rampant-arsenal-technology-shotgun=Shotgun Turrets
+rampant-arsenal-technology-rapid-rocket-turret=Rapid Rocket Turrets
+
+rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
+rampant-arsenal-technology-capsule-turret-damage=Capsule Turret Damage Bonus
+rampant-arsenal-technology-cannon-turret-damage=Cannon Turret Damage Bonus
+rampant-arsenal-technology-shotgun-turret-damage=Shotgun Turret Damage Bonus
+rampant-arsenal-technology-rocket-turret-damage=Rocket Turret Damage Bonus
+rampant-arsenal-technology-landmine-damage=Landmine Damage Bonus
+rampant-arsenal-technology-artillery-turret-damage=Artillery Turret Damage Bonus
+rampant-arsenal-technology-artillery-shell-damage=Artillery Shell Damage Bonus
+
+rampant-arsenal-technology-incendiary-napalm=Advanced Flamethrower Fuel
+rampant-arsenal-technology-boosters=Boosters
+
+rampant-arsenal-technology-he-landmine=High Explosive Landmines
+rampant-arsenal-technology-bio-landmine=Bio Landmines
+rampant-arsenal-technology-incendiary-landmine=Incendiary Landmines
+
+rampant-arsenal-technology-he-grenades=High Explosive Grenades
+rampant-arsenal-technology-bio-grenades=Bio Grenades
+rampant-arsenal-technology-incendiary-grenades=Incendiary Grenades
+
+rampant-arsenal-technology-he-bullets=High Explosive Bullets
+rampant-arsenal-technology-bio-bullets=Bio Bullets
+rampant-arsenal-technology-incendiary-bullets=Incendiary Bullets
+
+rampant-arsenal-technology-he-rockets=High Explosive Rockets
+rampant-arsenal-technology-bio-rockets=Bio Rockets
+rampant-arsenal-technology-incendiary-rockets=Incendiary Rockets
+
+
+rampant-arsenal-technology-he-shotgun-shells=High Explosive Shotgun Shells
+rampant-arsenal-technology-bio-shotgun-shells=Bio Shotgun Shells
+rampant-arsenal-technology-incendiary-shotgun-shells=Incendiary Shotgun Shells
+
+rampant-arsenal-technology-he-cannon-shells=High Explosive Cannon Shells
+rampant-arsenal-technology-bio-cannon-shells=Bio Cannon Shells
+rampant-arsenal-technology-incendiary-cannon-shells=Incendiary Cannon Shells
+
+
+rampant-arsenal-technology-he-artillery-shells=High Explosive Artillery Shells
+rampant-arsenal-technology-bio-artillery-shells=Bio Artillery Shells
+rampant-arsenal-technology-incendiary-artillery-shells=Incendiary Artillery Shells
+
+rampant-arsenal-technology-bio-capsules=Bio Capsules
+rampant-arsenal-technology-paralysis=Paralysis Capsules
+
+rampant-arsenal-technology-regeneration=Regeneration
+rampant-arsenal-technology-regeneration-walls=Regeneration Walls
+rampant-arsenal-technology-regeneration-turrets=Regeneration Turrets
+
+rampant-arsenal-technology-bio-weapons=Bio Weapons
+rampant-arsenal-technology-incendiary=Incendiary Weapons
+rampant-arsenal-technology-high-explosives=High Explosive Weapons
+
+rampant-arsenal-technology-nuclear-railway=Nuclear Railway
+rampant-arsenal-technology-nuclear-tanks=Nuclear Tanks
+
+rampant-arsenal-technology-oil-burner=Oil Burners
+rampant-arsenal-technology-tanks=Tanks
+rampant-arsenal-technology-turrets=Turrets
+rampant-arsenal-technology-cars=Automobilism
+rampant-arsenal-technology-power-armor-mk3=Power Armor MK3
+rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
+rampant-arsenal-technology-battery-equipment=Battery Equipment
+rampant-arsenal-technology-shield-equipment=Energy Shield Equipment
+rampant-arsenal-technology-stone-walls=Stone Walls
+rampant-arsenal-technology-generator-equipment=Portable Fusion Reactor
+rampant-arsenal-technology-character-health=Character Health Bonus
+
+rampant-arsenal-technology-personal-bullets-defense=Personal Bullet Defense
+rampant-arsenal-technology-personal-cannon-defense=Personal Cannon Defense
+rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
+rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
+rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
+rampant-arsenal-technology-gun-turret-damage=Gun Turret Damage
 
 [entity-description]
