--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -254,6 +254,7 @@ rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Rapid Cannon Turret Damage
 landmine-damage-bonus=Landmine Damage Bonus: +__1__
 artillery-turret-attack-bonus=Artillery Turret Damage Bonus: +__1__
 gun-ammo-turret-rampant-arsenal-attack-bonus=Gun Turret MkII Turret Damage Bonus: +__1__
+rifle-ammo-turret-rampant-arsenal-attack-bonus=Rifle Turret Damage Bonus: +__1__
 capsule-ammo-turret-rampant-arsenal-attack-bonus=Capsule Launcher Damage Bonus: +__1__
 medic-ammo-turret-rampant-arsenal-attack-bonus=Medic Turret Repair Bonus: +__1__
 artillery-wagon-attack-bonus=Artillery Wagon Turret Damage Bonus: +__1__
