--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,6 +13,9 @@ shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
 advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
 
+advanced-accumulator-rampant-arsenal=Advanced Accumulator
+advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
+
 landmine-ghostless-rampant-arsenal=Land Mine
 he-landmine-rampant-arsenal=High Explosive Landmine
 he-landmine-ghostless-rampant-arsenal=High Explosive Landmine
@@ -71,6 +74,9 @@ rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
 
 advanced-car-machine-gun-gun-rampant-arsenal=Minigun
 advanced-car-shotgun-gun-rampant-arsenal=Shotgun
+
+advanced-accumulator-rampant-arsenal=Advanced Accumulator
+advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
 
 advanced-tank-machine-gun-gun-rampant-arsenal=Minigun
 advanced-tank-cannon-gun-rampant-arsenal=Cannon
@@ -231,6 +237,8 @@ rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
 rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
 rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 
+rampant-arsenal-technology-solar-energy=Solar Energy
+
 [equipment-name]
 
 mk3-battery-rampant-arsenal=Battery MK3
@@ -348,5 +356,26 @@ rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
 rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
 rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 rampant-arsenal-technology-gun-turret-damage=Gun Turret Damage
+
+rampant-arsenal-technology-solar-energy=Solar Energy
+rampant-arsenal-technology-electric-energy-accumulators=Electric Energy Accumulators
+
+[mod-setting-name]
+rampant-arsenal-useNonCollidingProjectilesShotgun=Use non colliding shotgun projectiles
+rampant-arsenal-useNonCollidingProjectilesLaser=Use non colliding laser projectiles
+rampant-arsenal-useNonCollidingProjectilesCannon=Use non colliding cannon projectiles
+rampant-arsenal-enableOilBurner=Enable Oil Based Generator
+rampant-arsenal-enableGunTurretDamageResearch=Enable dedicated gun turret damage research
+rampant-arsenal-enableAdvancedAccumulator=Enable Advanced Accumulator entity
+rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
+
+[mod-setting-description]
+rampant-arsenal-useNonCollidingProjectilesShotgun=Shotgun projectiles no longer collide with entities from the same force
+rampant-arsenal-useNonCollidingProjectilesCannon=Cannon projectiles no longer collide with entities from the same force
+rampant-arsenal-useNonCollidingProjectilesLaser=Laser projectiles no longer collide with entities from the same force, This only affects the Advanced Laser currently.
+rampant-arsenal-enableOilBurner=A generator that uses fluids with a fuel value. Disabling this will also cause this mod to not add fluid fuel values to existing fluids.
+rampant-arsenal-enableGunTurretDamageResearch=Disabling this will cause rifle, gun, gun mk2 turrets to be on the standard physical projectile tech bonus research instead of a dedicated research for gun turret damage bonus.
+rampant-arsenal-enableAdvancedAccumulator=Adds an Advanced Accumulator entity that is the x9 of normal accumulator with 50% better output then 9 small accumulators
+rampant-arsenal-enableAdvancedSolarPanel=Adds an Advanced Solar entity that is the x16 of normal solar panel with 50% better output then 16 small solar panels
 
 [entity-description]
