--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -238,6 +238,7 @@ rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
 rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 
 rampant-arsenal-technology-solar-energy=Solar Energy
+rampant-arsenal-technology-electric-energy-accumulators=Electric Energy Accumulators
 
 [equipment-name]
 
