--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,6 +12,7 @@ suppression-cannon-fluid-turret-rampant-arsenal=Advanced Flamethrower Turret
 shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
 advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
+advanced-beam-electric-turret-rampant-arsenal=Advanced Beam Turret
 
 advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
