--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -253,7 +253,6 @@ lightning-passive-defense-rampant-arsenal=Personal Lightning Defense
 bullets-passive-defense-rampant-arsenal=Personal Bullet Defense
 slow-passive-defense-rampant-arsenal=Personal Slowdown Defense
 
-
 [modifier-description]
 capsule-launcher-shooting-speed-bonus=Capsule Launcher Shooting Speed: +__1__
 cannon-ammo-turret-rampant-arsenal-attack-bonus=Cannon Turret Damage Bonus: +__1__
@@ -371,6 +370,8 @@ rampant-arsenal-enableGunTurretDamageResearch=Enable dedicated gun turret damage
 rampant-arsenal-enableAdvancedAccumulator=Enable Advanced Accumulator entity
 rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
 
+rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment uses cells
+
 [mod-setting-description]
 rampant-arsenal-useNonCollidingProjectilesShotgun=Shotgun projectiles no longer collide with entities from the same force
 rampant-arsenal-useNonCollidingProjectilesCannon=Cannon projectiles no longer collide with entities from the same force
@@ -379,5 +380,6 @@ rampant-arsenal-enableOilBurner=A generator that uses fluids with a fuel value. 
 rampant-arsenal-enableGunTurretDamageResearch=Disabling this will cause rifle, gun, gun mk2 turrets to be on the standard physical projectile tech bonus research instead of a dedicated research for gun turret damage bonus.
 rampant-arsenal-enableAdvancedAccumulator=Adds an Advanced Accumulator entity that is the x9 of normal accumulator with 50% better output then 9 small accumulators
 rampant-arsenal-enableAdvancedSolarPanel=Adds an Advanced Solar entity that is the x16 of normal solar panel with 50% better output then 16 small solar panels
+rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment now consumes uranium cells like a normal nuclear reactor
 
 [entity-description]
