--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -223,6 +223,16 @@ rampant-arsenal-technology-oil-burner=Oil Burners
 rampant-arsenal-technology-tanks=Tanks
 rampant-arsenal-technology-turrets=Turrets
 rampant-arsenal-technology-gun-turret-damage=Gun Turret Damage
+rampant-arsenal-technology-bullet-speed=Bullet Speed
+rampant-arsenal-technology-bullet-damage=Bullet Damage
+rampant-arsenal-technology-rocket-speed=Rocket Speed
+rampant-arsenal-technology-rocket-damage=Rocket Damage
+rampant-arsenal-technology-shotgun-shell-speed=Shotgun Shell Speed
+rampant-arsenal-technology-shotgun-shell-damage=Shotgun Shell Damage
+rampant-arsenal-technology-cannon-shell-speed=Cannon Shell Speed
+rampant-arsenal-technology-cannon-shell-damage=Cannon Shell Damage
+rampant-arsenal-technology-stronger-explosives=Grenade Damage
+
 rampant-arsenal-technology-cars=Automobilism
 rampant-arsenal-technology-power-armor-mk3=Power Armor MK3
 rampant-arsenal-technology-nuclear-cars=Nuclear Automobilism
@@ -238,8 +248,11 @@ rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
 rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
 rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 
+rampant-arsenal-technology-energy-robots-damage=Laser Combat Robots Damage
 rampant-arsenal-technology-solar-energy=Solar Energy
 rampant-arsenal-technology-electric-energy-accumulators=Electric Energy Accumulators
+
+rampant-arsenal-technology-energy-weapons-damage=Laser Turret Damage
 
 [equipment-name]
 
@@ -320,6 +333,17 @@ rampant-arsenal-technology-he-cannon-shells=High Explosive Cannon Shells
 rampant-arsenal-technology-bio-cannon-shells=Bio Cannon Shells
 rampant-arsenal-technology-incendiary-cannon-shells=Incendiary Cannon Shells
 
+rampant-arsenal-technology-bullet-speed=Bullet Speed
+rampant-arsenal-technology-bullet-damage=Bullet Damage
+rampant-arsenal-technology-rocket-speed=Rocket Speed
+rampant-arsenal-technology-rocket-damage=Rocket Damage
+
+rampant-arsenal-technology-shotgun-shell-speed=Shotgun Shell Speed
+rampant-arsenal-technology-shotgun-shell-damage=Shotgun Shell Damage
+rampant-arsenal-technology-cannon-shell-speed=Cannon Shell Speed
+rampant-arsenal-technology-cannon-shell-damage=Cannon Shell Damage
+rampant-arsenal-technology-stronger-explosives=Grenade Damage
+rampant-arsenal-technology-energy-robots-damage=Laser Combat Robots Damage
 
 rampant-arsenal-technology-he-artillery-shells=High Explosive Artillery Shells
 rampant-arsenal-technology-bio-artillery-shells=Bio Artillery Shells
@@ -357,6 +381,7 @@ rampant-arsenal-technology-personal-lightning-defense=Personal Lightning Defense
 rampant-arsenal-technology-personal-shotgun-defense=Personal Shotgun Defense
 rampant-arsenal-technology-personal-slow-defense=Personal Slow Defense
 rampant-arsenal-technology-gun-turret-damage=Gun Turret Damage
+rampant-arsenal-technology-energy-weapons-damage=Laser Turret Damage
 
 rampant-arsenal-technology-solar-energy=Solar Energy
 rampant-arsenal-technology-electric-energy-accumulators=Electric Energy Accumulators
@@ -370,6 +395,8 @@ rampant-arsenal-enableGunTurretDamageResearch=Enable dedicated gun turret damage
 rampant-arsenal-enableAdvancedAccumulator=Enable Advanced Accumulator entity
 rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
 
+rampant-arsenal-unhideVanillaDamageTechnologies=Unhide vanilla damage technologies
+
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment uses cells
 
 [mod-setting-description]
@@ -381,5 +408,7 @@ rampant-arsenal-enableGunTurretDamageResearch=Disabling this will cause rifle, g
 rampant-arsenal-enableAdvancedAccumulator=Adds an Advanced Accumulator entity that is the x9 of normal accumulator with 50% better output then 9 small accumulators
 rampant-arsenal-enableAdvancedSolarPanel=Adds an Advanced Solar entity that is the x16 of normal solar panel with 50% better output then 16 small solar panels
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment now consumes uranium cells like a normal nuclear reactor
+
+rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
 
 [entity-description]
