--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -412,3 +412,6 @@ rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equip
 rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
 
 [entity-description]
+
+[ammo-category-name]
+capsule-launcher=Launcher Ammo
